@@ -5,6 +5,8 @@ import com.pug.identity.domain.vos.Email;
 import com.pug.identity.presenter.dtos.AccountResponse;
 import com.pug.identity.presenter.mappers.AccountPresenter;
 import com.pug.identity.service.AccountReadService;
+import com.pug.shared.exceptions.AppValidationException;
+import com.pug.shared.exceptions.ResourceNotFoundException;
 import com.pug.shared.i18n.I18n;
 import com.pug.shared.presenter.dtos.BulkCreateResult;
 import com.pug.shared.presenter.rest.ApiEnvelope;
@@ -23,21 +25,28 @@ import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-/** REST resource for read-only operations on accounts. */
+/**
+ * REST resource for read-only operations on accounts.
+ */
 @Path("/identity/accounts")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
 public class AccountReadOnlyResource {
 
-  @Inject AccountReadService readService;
-  @Inject I18n i18n;
+  @Inject
+  AccountReadService readService;
+  @Inject
+  I18n i18n;
 
-  @Context HttpHeaders headers;
+  @Context
+  HttpHeaders headers;
 
   /**
    * Picks the best locale from the Accept-Language header.
@@ -53,6 +62,7 @@ public class AccountReadOnlyResource {
    *
    * @param id the UUIDv7 of the account.
    * @return the account response wrapped in an ApiEnvelope.
+   * @throws ResourceNotFoundException if no account with the given ID is found (or its associated user is missing).
    */
   @GET
   @Path("{id}")
@@ -69,40 +79,46 @@ public class AccountReadOnlyResource {
   @GET
   public Response list() {
     List<AccountResponse> list =
-        readService.listViews().stream()
-            .map(v -> AccountPresenter.toResponse(v, locale(), i18n))
-            .toList();
+            readService.listViews().stream()
+                    .map(v -> AccountPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
 
   /**
    * Retrieves an account by its email.
    *
-   * @param emailRaw the email of the account.
+   * @param emailRaw the raw email string of the account.
    * @return the account response wrapped in an ApiEnvelope.
+   * @throws AppValidationException    if the provided email is malformed.
+   * @throws ResourceNotFoundException if no account with the given email is found (or its associated user is missing).
    */
   @GET
   @Path("by-email/{email}")
   public Response getByEmail(@PathParam("email") @NotNull String emailRaw) {
-    String email = new Email(emailRaw).toString();
-    var body = AccountPresenter.toResponse(readService.getViewByEmail(email), locale(), i18n);
+    Email emailVO;
+    emailVO = new Email(emailRaw);
+    var body = AccountPresenter.toResponse(readService.getViewByEmail(emailVO.toString()), locale(), i18n);
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
   /**
    * Lists accounts by CPF.
    *
-   * @param cpfRaw the CPF of the accounts.
+   * @param cpfRaw the raw CPF string of the accounts.
    * @return a list of account responses wrapped in an ApiEnvelope.
+   * @throws AppValidationException    if the provided CPF is malformed.
+   * @throws ResourceNotFoundException if associated user data is missing for any found account.
    */
   @GET
   @Path("by-cpf/{cpf}")
   public Response listByCpf(@PathParam("cpf") @NotNull String cpfRaw) {
-    String cpf = new Cpf(cpfRaw).toString();
+    Cpf cpfVO;
+    cpfVO = new Cpf(cpfRaw);
     List<AccountResponse> list =
-        readService.listViewsByCpf(cpf).stream()
-            .map(v -> AccountPresenter.toResponse(v, locale(), i18n))
-            .toList();
+            readService.listViewsByCpf(cpfVO.toString()).stream()
+                    .map(v -> AccountPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
 
@@ -111,6 +127,7 @@ public class AccountReadOnlyResource {
    *
    * @param query the name query string.
    * @return a list of account responses wrapped in an ApiEnvelope.
+   * @throws ResourceNotFoundException if associated user data is missing for any found account.
    */
   @GET
   @Path("by-name")
@@ -120,9 +137,9 @@ public class AccountReadOnlyResource {
     }
 
     List<AccountResponse> list =
-        readService.search(query).stream()
-            .map(v -> AccountPresenter.toResponse(v, locale(), i18n))
-            .toList();
+            readService.search(query).stream()
+                    .map(v -> AccountPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
 }
